# qbuild

./: .gitignore  BENCH.md  Cargo.toml  MACOS.md  README.md
packaging/macos-guest/: README.md  build.sh  manifest.json  patch-containerization-checkout.sh  prepare-upstream.sh  zig-cc-target.sh
src/: build.rs  cli.rs  containers.rs  error.rs  gpu.rs  guestd.rs  main.rs  protocol.rs  runtime.rs  services.rs
src/image/: layers.rs  mod.rs  store.rs
src/platform/: linux_local.rs  macos_host.rs  mod.rs  render.rs
src/registry/: auth.rs  client.rs  mod.rs
tools/macos-supervisor/: Package.resolved  Package.swift  build.sh
tools/macos-supervisor/Sources/QBuildMacOSSupervisor/: main.swift
